--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "author": "yash",
   "license": "ISC",
@@ -15,7 +14,9 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.2",
-    "nodemon": "^3.0.3"
+    "mongoose": "^8.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
