--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "bootstrap-dark-5": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
     "css-loader": "^7.1.2",
     "nodemon": "^3.1.2",
     "postcss-loader": "^8.1.1"
